--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
       </td>
       <td>
-        <h1>Angela Yu</h1>
+        <h1>Angela Yan</h1>
         <p><em>Founder and CTO of <strong><a href="https://appbrewery.com/">The App Brewery</a></strong></em></p>
                 I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.
       </td>
